fixed grid layout issues and added missing artist image

--- a/iwppa1.css
+++ b/iwppa1.css
@@ -1,3 +1,9 @@
+/* fix variable height thumbnails breaking the grid */
+.row.fix {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 /* Start google fonts*/
 h1 {
     font-family: Pacifico, cursive;
